# IcedTea-Web

./: .editorconfig  .gitattributes  .gitignore  .hgignore  .travis.yml  AUTHORS  CODE_OF_CONDUCTION.md  CONTRIBUTING.md  ChangeLog  INSTALL_WINDOWS.md  JAVA_STYLE_GUIDE.md  LICENCE_DETAILS  LICENCE_DETAILS.md  LICENSE  Makefile.am  NEWS  NEW_LINE_IFS  README  README.md  RELEASE.md  acinclude.m4  autogen.sh  bisect-script.sh  build.properties.in  configure.ac  extendedReflectionTests.diff  html-gen.sh  icedteaweb-completion  icedteaweb-completion.in  itweb-settings.desktop.in  javac.in  javaws.desktop  javaws.desktop.in  jrunscript.in  modified_JSToJFuncParam_with_decodeURIComponent.patch  netx-dist-tests-whitelist  netx.manifest.in  policyeditor.desktop.in  pom.xml
.github/workflows/: build-1.8.yml  build.yml  codeql-analysis.yml  maven.yml  windows_build.sh  windows_sign.sh
artifact-all-dependencies/: pom.xml
artifact-no-dependencies/: pom.xml
artifacts/: pom.xml
clients/: pom.xml
common/: pom.xml
completion/: itweb-settings.bash.in
core/: pom.xml
core/src/test/resources/: simplelogger.properties
integration/: pom.xml
integration-test-extensions/: README.md  pom.xml
integration-tests/: pom.xml
integration-tests/classloader-integration-tests/: pom.xml
integration-tests/classloader-integration-tests-module-1/: pom.xml
integration-tests/classloader-integration-tests-module-2/: pom.xml
integration-tests/classloader-integration-tests-module-3/: pom.xml
integration-tests/classloader-integration-tests-module-native/: pom.xml
integration-tests/classloader-integration-tests-module-native/nativeLib/: ClassWithNativeCall.c  ClassWithNativeCall.h  README.MD  libnativeLib.dylib
integration-tests/classloader-integration-tests-module-parent/: pom.xml
integration-tests/classloader-integration-tests-module-wrapper/: pom.xml
integration-tests/junit-runner/: CommandLine.java  JunitLikeXmlOutputListener.java  LessVerboseTextListener.java  README
integration-tests/report-styles/: jreport.xsl  logs.xsl  output.css  textreport.xsl
integration-tests/reproducers/: cloneReproducer.sh
integration-tests/reproducers/custom/AppletExtendsFromOutsideJar/: README
integration/src/test/resources/: simplelogger.properties
itw/: pom.xml
javaws/: pom.xml
jnlp-api/: pom.xml
jnlp-servlet/: LICENSE.txt  README.md  pom.xml
launcher/: itweb-settings.in  java_md.c  javaws.in  launchers.bat.in  launchers.in  launchers.sh.in
launcher/rust-launcher/: Cargo.toml
launcher/shell-launcher/: launchers.bat.in  launchers.sh.in
launchers/: build.sh  configure.sh  itweb-settings.desktop.in  pom.xml  utils.sh
launchers/completion/: javaws.bash.in  policyeditor.bash.in
launchers/metadata/: icedtea-web-javaws.appdata.xml
launchers/metadata.in/: icedtea-web-plugin.pom  icedtea-web.metainfo.xml
launchers/rust-launcher/: Cargo.toml  build.rs
launchers/rust-launcher/src/: dirs_paths_helper.rs  hardcoded_paths.rs  jars_helper.rs  log_helper.rs  main.rs  property.rs  utils.rs
launchers/shell-launcher/: launchers.bat.in  launchers.sh.in
launchers/win-installer/: LICENSE.rtf  installer.json.in
launchers/xdesktop.in/: policyeditor.desktop.in
metadata.in/: icedtea-web-javaws.appdata.xml  icedtea-web.pom
netx/: itweb-settings.1  javaws.1  policyeditor.1
netx/javax/jnlp/: BasicService.java  ClipboardService.java  DownloadService.java  DownloadService2.java  DownloadServiceListener.java  ExtendedService.java  ExtensionInstallerService.java  FileContents.java  FileOpenService.java  FileSaveService.java  JNLPRandomAccessFile.java  PersistenceService.java  PrintService.java  ServiceManager.java  ServiceManagerStub.java  UnavailableServiceException.java
netx/sun/applet/: AppletViewerPanelAccess.java
old-test-suite/cpp-unit-tests/: IcedTeaJavaRequestProcessorTest.cc  IcedTeaNPPluginTest.cc  PluginParametersTest.cc  browser_mock.cc  browser_mock.h  browser_mock_npidentifier.cc  browser_mock_npidentifier.h  checked_allocations.cc  checked_allocations.h
old-test-suite/junit-runner/: JunitLikeXmlOutputListener.java
old-test-suite/report-styles/: jreport.xsl  logs.xsl
plugin/docs/: npplugin_liveconnect_design.html
plugin/icedteanp/: IcedTeaJavaRequestProcessor.cc  IcedTeaJavaRequestProcessor.h  IcedTeaNPPlugin.cc  IcedTeaNPPlugin.h  IcedTeaParseProperties.cc  IcedTeaParseProperties.h  IcedTeaPluginRequestProcessor.cc  IcedTeaPluginRequestProcessor.h  IcedTeaPluginUtils.cc  IcedTeaPluginUtils.h  IcedTeaRunnable.cc  IcedTeaRunnable.h  IcedTeaScriptablePluginObject.cc  IcedTeaScriptablePluginObject.h
plugin/tests/LiveConnect/: DummyObject.java  OverloadTestHelper1.java  OverloadTestHelper2.java  OverloadTestHelper3.java  PluginTest.java  build  common.js  index.html  jjs_eval_test.js  jjs_func_parameters_tests.js  jjs_func_rettype_tests.js  jjs_get_tests.js  jjs_set_tests.js  jsj_func_overload_tests.js  jsj_func_parameters_tests.js  jsj_func_rettype_tests.js  jsj_get_tests.js  jsj_set_tests.js  jsj_type_conversion_tests.js
rust-launcher/: Cargo.toml  hardoced_paths.rs.in  launchers.rs
rust-launcher/src/: dirs_paths_helper.rs  hardcoded_paths.rs  jars_helper.rs  jvm_from_properties.rs  jvm_from_properties_resolver.rs  log_helper.rs  main.rs  os_access.rs  property.rs  property_from_file.rs  property_from_files_resolver.rs  utils.rs
shell-launcher/: launchers.bat.in  launchers.sh.in
test-extensions/: pom.xml
tests/UnitTest++/: Makefile
tests/cpp-unit-tests/: IcedTeaNPPluginTest.cc  IcedTeaParsePropertiesTest.cc  IcedTeaPluginUtilsTest.cc  IcedTeaScriptablePluginObjectTest.cc  MemoryLeakDetector.h  browser_mock.cc  browser_mock.h  checked_allocations.h  main.cc
tests/jnlp_tests/: README
tests/junit-runner/: CommandLine.java  JunitLikeXmlOutputListener.java  LessVerboseTextListener.java
tests/netx/pac/: pac-funcs-test.js
tests/report-styles/: index.html.in  index.js  jreport.xsl  report.css
tests/reproducers/: cloneReproducer.sh
tests/softkiller/: Makefile  softkiller.c
win-installer/: installer.json.in
xml-parser/: pom.xml
(+4190 files in other folders)
